Add a "Do not ask again" option to close session dialog

This is called on Menu->Close Sesssion and right-click tab->Close Tab

BUG: 405481